--- a/deploy/operator.yaml
+++ b/deploy/operator.yaml
@@ -17,7 +17,7 @@ spec:
       containers:
         - name: m4e-operator
           # Replace this with the built image name
-          image: "REPLACE_IMAGE"
+          image: "quay.io/krestomatio/m4e-operator"
           imagePullPolicy: "Always"
           volumeMounts:
           - mountPath: /tmp/ansible-operator/runner
