--- a/molecule/test-local/molecule.yml
+++ b/molecule/test-local/molecule.yml
@@ -19,6 +19,7 @@ platforms:
     published_ports:
       - 0.0.0.0:${TEST_CLUSTER_PORT:-10443}:8443/tcp
     pre_build_image: true
+    keep_volumes: false
     volumes:
       - ${MOLECULE_PROJECT_DIRECTORY}:/build:Z
 provisioner:
