--- a/roles/m4e/tasks/main.yml
+++ b/roles/m4e/tasks/main.yml
@@ -7,6 +7,7 @@
     kind: "{{ item[0].name }}"
     template: "{{ item[0].template }}"
     component: "{{ item[1].component | default(false) }}"
+    annotations: "{{ item[1].annotations | default(false) }}"
     version: "{{ item[1].version | default(false) }}"
     config_environment: "{{ item[1].config_environment | default(false) }}"
     config_conf: "{{ item[1].config_conf | default(false) }}"
@@ -16,6 +17,7 @@
     secret_string_data: "{{ item[1].secret_string_data | default(false) }}"
     deploy_spec: "{{ item[1].deploy_spec | default(false) }}"
     service_spec: "{{ item[1].service_spec | default(false) }}"
+    route_name: "{{ item[1].route_name | default(false) }}"
     route_annotations: "{{ item[1].route_annotations | default(false) }}"
     route_spec: "{{ item[1].route_spec | default(false) }}"
     ingress_spec: "{{ item[1].ingress_spec | default(false) }}"
