--- a/roles/m4e/defaults/main.yml
+++ b/roles/m4e/defaults/main.yml
@@ -3,6 +3,7 @@
 state: present
 deploy_template: deploy.yaml.j2
 config_template: config.yaml.j2
+pvc_template: pvc.yaml.j2
 secret_template: secret.yaml.j2
 service_template: service.yaml.j2
 route_template: route.yaml.j2
@@ -62,7 +63,8 @@ apache2_deploy_spec: |
           name: moodledata
       volumes:
       - name: moodledata
-        emptyDir: {}
+        persistentVolumeClaim:
+          claimName: '{{ meta.name }}-php-fpm'
 
 # php-fpm
 php_fpm_size: 1
@@ -75,6 +77,12 @@ php_fpm_service_spec: |
     protocol: TCP
   selector:
     app: '{{ meta.name }}-php-fpm'
+php_fpm_pvc_spec: |
+  accessModes:
+    - 'ReadWriteOnce'
+  resources:
+    requests:
+      storage: '1Gi'
 php_fpm_deploy_spec: |
   replicas: {{ php_fpm_size }}
   selector:
@@ -98,7 +106,8 @@ php_fpm_deploy_spec: |
           name: moodledata
       volumes:
       - name: moodledata
-        emptyDir: {}
+        persistentVolumeClaim:
+          claimName: '{{ meta.name }}-php-fpm'
 
 # postgres
 postgres_size: 1
@@ -112,14 +121,18 @@ postgres_secret_data: |
   database_password: '{{ database_password | b64encode }}'
 postgres_service_spec: |
   selector:
-    name: '{{ meta.name }}-postgres'
-  type: ClusterIP
+    app: '{{ meta.name }}-postgres'
+  clusterIP: None
   ports:
     - name: postgresql
       port: 5432
-      protocol: TCP
-      targetPort: 5432
-  sessionAffinity: None
+  sessionAffinity: ClientIP
+postgres_pvc_spec: |
+  accessModes:
+    - 'ReadWriteOnce'
+  resources:
+    requests:
+      storage: '1Gi'
 postgres_deploy_spec: |
   replicas: {{ postgres_size }}
   selector:
@@ -146,6 +159,7 @@ postgres_deploy_spec: |
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 5432
+          name: postgresql
         readinessProbe:
           exec:
             command:
@@ -177,7 +191,8 @@ postgres_deploy_spec: |
           name: postgres-data
       volumes:
       - name: postgres-data
-        emptyDir: {}
+        persistentVolumeClaim:
+          claimName: '{{ meta.name }}-postgres'
 
 # order intended
 objects:
@@ -187,6 +202,8 @@ objects:
     template: "{{ secret_template }}"
   - name: service
     template: "{{ service_template }}"
+  - name: pvc
+    template: "{{ pvc_template }}"
   - name: deploy
     template: "{{ deploy_template }}"
   - name: route
@@ -200,27 +217,31 @@ components:
     state: "{{ postgres_state }}"
     component: database
     objects:
+      - pvc
       - secret
-      - deploy
       - service
+      - deploy
     secret_data: "{{ postgres_secret_data }}"
     deploy_spec: "{{ postgres_deploy_spec }}"
     service_spec: "{{ postgres_service_spec }}"
+    pvc_spec: "{{ postgres_pvc_spec }}"
   - name: php-fpm
     state: "{{ php_fpm_state }}"
     component: backend
     objects:
-      - deploy
+      - pvc
       - service
+      - deploy
     deploy_spec: "{{ php_fpm_deploy_spec }}"
     service_spec: "{{ php_fpm_service_spec }}"
+    pvc_spec: "{{ php_fpm_pvc_spec }}"
   - name: apache2
     state: "{{ apache2_state }}"
     component: frontend
     route_annotations: "{{ apache2_route_annotations }}"
     objects:
-      - deploy
       - service
+      - deploy
       - route
     deploy_spec: "{{ apache2_deploy_spec }}"
     service_spec: "{{ apache2_service_spec }}"
