--- a/deploy/crds/m4e.krestomatio.com_v1alpha1_m4e_cr_testing.yaml
+++ b/deploy/crds/m4e.krestomatio.com_v1alpha1_m4e_cr_testing.yaml
@@ -8,6 +8,7 @@ spec:
   # Add fields here
   httpd_size: 1
   php_fpm_size: 1
+  app_image: image-registry.openshift-image-registry.svc:5000/osdk-test/moodle_app
   httpd_image: image-registry.openshift-image-registry.svc:5000/osdk-test/moodle_httpd
   php_fpm_image: image-registry.openshift-image-registry.svc:5000/osdk-test/moodle_php-fpm
   postgres_image: image-registry.openshift-image-registry.svc:5000/osdk-test/postgres
